<resources>
    <string name="app_name">BigMath</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="credits">Credits</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseImage">Choose Image</string>
    <string name="username">Username</string>
    <string name="course_name">Mobile Architectures</string>
    <string name="PAUSA_STR">PAUSE</string>
    <string name="score">SCORE</string>
    <string name="author3">Rodrigo Costa</string>
    <string name="author2">Leonardo Sousa</string>
    <string name="author1">Diogo Pascoal</string>
    <string name="authors">Authors</string>
    <string name="time">Time</string>
    <string name="zero_value">0</string>
    <string name="multiplyer_title">Multiplyer Mode</string>
    <string name="msg_multiplyer_initializer">You want to play as a Server or Client?</string>
    <string name="client_btn">Client</string>
    <string name="server_btn">Server</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ipInformation">Server IP Adress:</string>
    <string name="clientConnect">Connect</string>
    <string name="clientConnectEmulator">Connect to Emulator</string>

    <string name="error_address">Address not recognized</string>
    <string name="msg_ip_address">Server IP address: %s\nWaiting for a client...</string>
    <string name="invitePlayers">Invite Players</string>
    <string name="startGameMultiplayer">Start Game</string>
    <string name="error_phoneNumber">Invalid phone number!</string>
    <string name="players">Nrº of Players: </string>
    <string name="warningMultiplayer">At least one player must connect for this type of game to start!</string>
    <string name="tittleLobby">Game Lobby </string>
    <string name="tittleSettings">Settings</string>

    <string name="user_avatar">User Avatar</string>
    <string name="submit">Submit</string>
    <string name="user_file_key">pt.isec.a21280348.bigmath.USER_PREFS</string>
    <string name="usernameIdent">username_sp</string>
    <string name="imageIdent">image_sp</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="nextLevel">Next level in </string>
    <string name="level">Level: </string>
    <string name="seconds">seconds</string>
    <string name="myScore">My Score:</string>
    <string name="myTime">My Time:</string>
    <string name="topTime">TOP TIME</string>
    <string name="topScore">TOP SCORE</string>
    <string name="quitQuestion">Do you really wish to quit?</string>
    <string name="leave">Leave</string>
    <string name="timeView">Time: </string>

</resources>