<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_credits"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/credits"
        android:textSize="70sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:text="@string/course_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:text="2022 / 2023" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:textSize="50sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image1"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="96dp"
            android:src="@drawable/diogo_p"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image2"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"

            android:src="@drawable/diogo_p"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="96dp"
            android:src="@drawable/diogo_p"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author1"
            android:gravity="center_horizontal">

        </TextView>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/author2"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/author3"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

        </TextView>



    </LinearLayout>

</LinearLayout>