<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:drawableEnd="@drawable/ic_settings" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_btn"
            android:drawableEnd="@drawable/ic_account"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSinglePlayer"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/single_player"
            android:textSize="18sp"
            android:background="@drawable/round_btn"
            android:drawableLeft="@drawable/ic_person"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnMultiplayer"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/multiplayer"
            android:textSize="18sp"
            android:background="@drawable/round_btn"
            android:drawableLeft="@drawable/ic_group_persons"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCredits"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/credits"
            android:textSize="18sp"
            android:background="@drawable/round_btn"
            android:drawableLeft="@drawable/ic_credits"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnExit"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/exit"
            android:textSize="18sp"
            android:background="@drawable/round_btn"
            android:drawableLeft="@drawable/ic_exit"
            />

    </LinearLayout>

</FrameLayout>