<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile_picture"
        app:civ_border_color="@color/purple_500"
        app:civ_border_width="2dp"
        />


    <LinearLayout
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profileImage"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        >
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnTakePhoto"
            android:layout_margin="8dp"

            android:text="@string/takePhoto"
            android:textSize="18sp"

            android:background="@drawable/round_btn"
            android:drawableLeft="@drawable/ic_camara"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnChooseImage"
            android:layout_margin="8dp"
            android:text="@string/chooseImage"
            android:textSize="15sp"
            android:background="@drawable/round_btn"
            android:drawableLeft="@drawable/ic_image"
            android:layout_weight="1"/>
    </LinearLayout>
        <EditText
            android:id="@+id/usernameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:maxLength="25"
            android:maxLines="1"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/submit"
            android:textSize="18sp"
            android:background="@drawable/round_btn"
            />
        </LinearLayout>
    </LinearLayout>








        <!--
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/img">

        </ImageView>-->
        <!--
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_circle"
            android:padding="8dp"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/white" />-->
        <!--
        <io.getstream.avatarview.AvatarView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:avatarViewShape="circle" />-->
        <!--put image.xml as background to your image view
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/image"
                />-->




</RelativeLayout>